# dgx-spark-setup

./: CLAUDE.md  README.md  pyproject.toml
docs/: memory_profiling_methodology.md
scripts/: build_vllm_from_source.sh  memory_profile_dpo.sh  memory_profile_lora.sh  memory_profile_sft.sh  oom_protection.sh
